tests/ui/issues/issue-19734.stderr
error: cannot find macro `undef` in the crate root
  --> $DIR/issue-19734.rs:6:5
   |
LL |     undef!();
   |     ^^^^^ not found in the crate root

error: aborting due to 1 previous error

